--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
-
+@import 'primeicons/primeicons.css';
 @import "tailwindcss";
+@import 'tailwindcss-primeui';
+@custom-variant dark (&:where(.my-app-dark, .my-app-dark *));
+
+@theme {
+  --font-sans:
+    system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
+
+html {
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
